k3s_cluster/base/dmz/media/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: dmz
  labels:
    app: dmz-media-lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dmz-media-lidarr
  template:
    metadata:
      labels:
        app: dmz-media-lidarr
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:latest
          ports:
            - containerPort: 8686
              name: web
          volumeMounts:
            - name: media-storage
              mountPath: /config
              subPath: lidarr/config
            - name: media-storage
              mountPath: /music
              subPath: media/music
            - name: media-storage
              mountPath: /downloads
              subPath: downloads/lidarr
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName:  media-pvc
