k3s_cluster/base/dmz/media/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: dmz
  labels:
    app: dmz-media-lidarr
spec:
  type: ClusterIP
  selector:
    app: dmz-media-lidarr
  ports:
    - name: web
      protocol: TCP
      port: 6656
      targetPort: 8686
