k3s_cluster/base/dmz/media/lidarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: dmz
  labels:
    app: dmz-media-lidarr
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`lidarr.media.dmz.home`)
      middlewares:
        - name: dmz-media-middleware-auth-authentik
      services:
        - name: dmz-media-lidarr-service
          port: 6656
  #tls: {}
